--- a/frontend/src/app/components/main_pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/components/main_pages/sign-up/sign-up.component.html
@@ -1,1 +1,21 @@
-<p>sign-up works!</p>
+<app-header></app-header>
+<div class="container mx-auto my-[120px] px-[6.25%]">
+  <div class="flex 2xl:justify-between xl:justify-between lg:justify-between md:justify-between sm:justify-center xs:justify-center items-center 2xl:flex-row xl:flex-row lg:flex-row md:flex-row sm:flex-col xs:flex-col">
+    <div class="2xl:w-[45%] xl:w-[45%] lg:w-[45%] md:w-[45%] sm:w-[80%] xs:w-full">
+      <img src="/assets/images/sign-up.svg" alt="" class="w-full rounded-2xl">
+    </div>
+    <div class="2xl:w-[45%] xl:w-[45%] lg:w-[45%] md:w-[45%] sm:w-[62%] xs:w-full text-white 2xl:mt-0 xl:mt-0 lg:mt-0 md:mt-0 sm:mt-10 xs:mt-8">
+      <h1 class="2xl:text-5xl xl:text-5xl lg:text-4xl md:text-3xl sm:text-4xl xs:text-3xl font-bold 2xl:text-start xl:text-start lg:text-start md:text-start sm:text-center xs:text-center">Create Account</h1>
+      <p class="2xl:text-2xl xl:text-2xl lg:text-xl md:text-lg sm:text-xl xs:text-base mt-3 mb-10 2xl:text-start xl:text-start lg:text-start md:text-start sm:text-center xs:text-center">Welcome! Enter Your Details And Start Creating, Collecting And Selling NFTs.</p>
+      <form action="" class="relative">
+        <input tabindex="1" type="email" placeholder="Username" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base 2xl:w-[360px] xl:w-[360px] lg:w-[300px] md:w-full sm:w-full xs:w-full focus:outline-none focus:border-2 focus:border-purple-500 mb-3">
+        <input tabindex="2" type="email" placeholder="Email" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base 2xl:w-[360px] xl:w-[360px] lg:w-[300px] md:w-full sm:w-full xs:w-full focus:outline-none focus:border-2 focus:border-purple-500 mb-3">
+        <input tabindex="3" type="email" placeholder="Password" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base 2xl:w-[360px] xl:w-[360px] lg:w-[300px] md:w-full sm:w-full xs:w-full focus:outline-none focus:border-2 focus:border-purple-500 mb-3">
+        <input tabindex="4" type="email" placeholder="Confirm Password" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base 2xl:w-[360px] xl:w-[360px] lg:w-[300px] md:w-full sm:w-full xs:w-full focus:outline-none focus:border-2 focus:border-purple-500">
+        <button tabindex="5" class="block 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base font-semibold text-center 2xl:w-[360px] xl:w-[360px] lg:w-[300px] md:w-full sm:w-full xs:w-full py-3 mt-5 rounded-2xl bg-purple-500 text-white transition">Create Account</button>
+      </form>
+      <p class="2xl:ms-9 xl:ms-9 lg:ms-6 md:ms-10 sm:ms-12 xs:ms-6 mt-5 2xl:text-lg xl:text-lg lg:text-base md:text-sm sm:text-base xs:text-base">Don't have you account yet? <a routerLink="/sign-in" class="text-blue-500">Sign In</a></p>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
