--- a/frontend/src/app/components/templates/footer/footer.component.html
+++ b/frontend/src/app/components/templates/footer/footer.component.html
@@ -1,40 +1,40 @@
 <div class="w-full bg-zinc-700">
   <div class="container mx-auto px-[6.25%]">
-    <div class="flex justify-between items-start pt-10 text-xl text-zinc-400">
-      <div class="2xl:w-[25%] xl:w-[30%] lg:w-[30%]">
+    <div class="flex justify-between 2xl:flex-row xl:flex-row lg:flex-row md:flex-col sm:flex-col xs:flex-col items-start pt-10 text-xl text-zinc-400">
+      <div class="2xl:w-[25%] xl:w-[30%] lg:w-[30%] md:w-[45%] sm:w-[45%] xs:w-full 2xl:mb-0 xl:mb-0 lg:mb-0 md:mb-5 sm:mb-5 xs:mb-5">
         <div class="flex items-center">
           <img src="/assets/images/Creepy-Ice-Cream.png" alt="Logo" width="50px" height="50px">
-          <h1 class="2xl:text-3xl xl:text-3xl lg:text-2xl font-semibold text-white">NFT Marketplace</h1>
+          <h1 class="2xl:text-3xl xl:text-3xl lg:text-2xl md:text-xl sm:text-2xl xs:text-xl font-semibold text-white">NFT Marketplace</h1>
         </div>
         <p class="my-5">NFT marketplace UI created with Anima for Figma.</p>
         <p>Join our community</p>
-        <div class="2xl:text-3xl xl:text-3xl lg:text-2xl mt-2 flex gap-4">
+        <div class="2xl:text-3xl xl:text-3xl lg:text-2xl md:text-xl sm:text-2xl xs:text-xl mt-2 flex gap-4">
           <a href="#" class="transition-colors hover:text-white"><fa-icon [icon]="faDiscord"></fa-icon></a>
           <a href="#" class="transition-colors hover:text-white"><fa-icon [icon]="faYoutube"></fa-icon></a>
           <a href="#" class="transition-colors hover:text-white"><fa-icon [icon]="faTwitter"></fa-icon></a>
           <a href="#" class="transition-colors hover:text-white"><fa-icon [icon]="faInstagram"></fa-icon></a>
         </div>
       </div>
-      <div class="w-[15%]">
+      <div class="2xl:w-[15%] xl:w-[15%] lg:w-[15%] md:w-[45%] sm:w-[45%] xs:w-full 2xl:mb-0 xl:mb-0 lg:mb-0 md:mb-5 sm:mb-5 xs:mb-5">
         <p class="2xl:text-3xl xl:text-3xl lg:text-2xl font-semibold text-white">Explore</p>
         <div>
-          <a routerLink="marketplace" class="mt-5 block transition-colors hover:text-white">Marketplace</a>
-          <a routerLink="rankings" class="mt-5 block transition-colors hover:text-white">Rankings</a>
-          <a routerLink="connet-wallet" class="mt-5 block transition-colors hover:text-white">Connect a wallet</a>
+          <a routerLink="/marketplace" class="mt-5 block transition-colors hover:text-white">Marketplace</a>
+          <a routerLink="/rankings" class="mt-5 block transition-colors hover:text-white">Rankings</a>
+          <a routerLink="/connet-wallet" class="mt-5 block transition-colors hover:text-white">Connect a wallet</a>
         </div>
       </div>
-      <div class="w-[35%]">
-        <p class="2xl:text-3xl xl:text-3xl lg:text-2xl font-semibold text-white">Join Out Weekly Digest</p>
-        <p class="my-5 w-[90%]">Get exclusive promotions & updates straight to your inbox.</p>
+      <div class="2xl:w-[35%] xl:w-[35%] lg:w-[35%] md:w-[45%] sm:w-[65%] xs:w-full">
+        <p class="2xl:text-3xl xl:text-3xl lg:text-2xl md:text-xl font-semibold text-white">Join Out Weekly Digest</p>
+        <p class="my-5 2xl:w-[90%] xl:w-[90%] lg:w-[90%] md:w-[90%] sm:w-[90%] xs:w-full">Get exclusive promotions & updates straight to your inbox.</p>
         <form class="relative">
-          <input type="email" placeholder="Enter your email here" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-base lg:text-sm 2xl:w-[90%] xl:w-full lg:w-full focus:outline-none">
-          <button class="absolute 2xl:right-10 xl:right-0 lg:right-0 2xl:text-lg xl:text-base lg:text-sm font-semibold 2xl:px-6 xl:px-6 lg:px-4 py-3 rounded-2xl bg-purple-500 text-white transition">
+          <input type="email" placeholder="Enter your email here" class="text-zinc-900 placeholder-zinc-900 py-3 px-4 rounded-2xl 2xl:text-lg xl:text-base lg:text-sm md:text-sm sm:text-lg xs:text-base 2xl:w-[90%] xl:w-full lg:w-full md:w-full sm:w-full xs:w-full focus:outline-none">
+          <button class="2xl:absolute xl:absolute lg:absolute md:absolute sm:static 2xl:right-10 xl:right-0 lg:right-0 md:right-0 2xl:text-lg xl:text-base lg:text-sm md:text-sm sm:text-lg xs:text-base font-semibold text-center 2xl:w-[150px] xl:w-[150px] lg:w-[130px] md:w-[130px] sm:w-full xs:w-full py-3 rounded-2xl bg-purple-500 text-white transition 2xl:mt-0 xl:mt-0 lg:mt-0 md:mt-0 sm:mt-5 xs:mt-3">
             <fa-icon [icon]="faEnvelope" class="me-3"></fa-icon>Subscribe
           </button>
         </form>
       </div>
     </div>
     <hr class="h-px bg-zinc-400 border-0 my-8">
-    <p class="text-zinc-400 text-lg">&copy; NFT Market. Author SAMAKAKI created in 2023</p>
+    <p class="text-zinc-400 text-sm">&copy; NFT Market. Author SAMAKAKI created in 2023</p>
   </div>
 </div>
